<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:weightSum="4">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/text_standby"
			android:textSize="@dimen/abc_text_size_headline_material"
			android:textColor="@color/accent_material_light"/>

	</LinearLayout>

	<!-- topleft, top and topright control buttons-->
	<LinearLayout
		android:layout_width="match_parent"
		android:id="@+id/linearlayout_touchcontroller_1"
		android:orientation="horizontal"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:weightSum="3">

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_topleft"
			android:layout_weight="1"
			android:text="@string/text_top_left"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_up"
			android:layout_weight="1"
			android:text="@string/text_up"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_topright"
			android:layout_weight="1"
			android:text="@string/text_top_right"/>

	</LinearLayout>

	<!-- left, connected indicator and right control buttons -->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:id="@+id/linearlayout_touchcontroller_2"
		android:orientation="horizontal"
		android:weightSum="3">

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_left"
			android:layout_weight="1"
			android:text="@string/text_left"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_connected_indicator"
			android:layout_weight="1"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_right"
			android:layout_weight="1"
			android:text="@string/text_right"/>

	</LinearLayout>

	<!-- bottomleft, down and bottomright touch control buttons -->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:layout_height="0dp"
		android:id="@+id/linearlayout_touchcontroller_3"
		android:orientation="horizontal"
		android:weightSum="3">

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_bottomleft"
			android:layout_weight="1"
			android:text="@string/text_bottom_left"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_down"
			android:layout_weight="1"
			android:text="@string/text_down"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/touchcontrol_bottomright"
			android:layout_weight="1"
			android:text="@string/text_bottom_right"/>

	</LinearLayout>

</LinearLayout>